# tinyforge

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
App/: project.yml
App/Sources/: ContentView.swift  TinyForgeApp.swift
App/Tests/: APIClientHubTests.swift  APIClientTests.swift  BackendIntegrationTests.swift  BackendLauncherTests.swift  DatasetBuilderModelTests.swift  DatasetIntegrationTests.swift  ExportModelTests.swift  Fakes.swift  HubBrowserModelTests.swift  HubIntegrationTests.swift  InferenceIntegrationTests.swift  LoadErrorReportingTests.swift  (+8 more)
backend/: pyproject.toml
backend/tests/: test_app_shutdown.py  test_children.py  test_dataset_formatting.py  test_dataset_loader.py  test_dataset_registry.py  test_dataset_routes.py  test_dataset_service.py  test_dataset_tokenize.py  test_export_commands.py  test_export_manager.py  test_export_routes.py  test_health.py  test_hub_auth.py  test_hub_cache.py  test_hub_client.py  test_hub_downloads.py  test_hub_errors.py  test_hub_routes.py  test_infer_routes.py  test_infer_service.py  test_lm_data.py  test_lm_tokenizer.py  test_lm_worker.py  test_main.py  test_run_registry.py  test_run_routes.py  test_server.py  test_system.py  test_train_config.py  test_train_models.py  test_train_parser.py  test_train_runner.py  test_train_service.py  test_watchdog.py
backend/tinyforge/: __init__.py  __main__.py  children.py  paths.py  server.py  services.py  system.py  watchdog.py
backend/tinyforge/api/: app.py  auth.py
backend/tinyforge/api/routers/: datasets.py  exports.py  health.py  hub.py  infer.py  runs.py  runtime.py
backend/tinyforge/datasets/: formatting.py  loader.py  models.py  registry.py  service.py  tokenize.py
backend/tinyforge/export/: commands.py  coreml.py  manager.py  models.py  push.py
backend/tinyforge/hub/: auth.py  cache.py  client.py  downloads.py  errors.py  models.py
backend/tinyforge/infer/: service.py
backend/tinyforge/train/: config.py  lm_data.py  lm_worker.py  models.py  parser.py  registry.py  runner.py  service.py  tokenizer.py  torch_worker.py  vision_worker.py
docs/: ROADMAP.md  ci.md  packaging.md
scripts/: TinyForge.entitlements  build_release.sh  bundle_python.sh  generate_icon.py  notarize.sh  package_dmg.sh  release.sh  sign.sh
(+43 files in other folders)
