[project]
name = "tinyforge"
version = "0.1.1"
description = "TinyForge ML backend — FastAPI orchestrator for training/finetuning tiny models on Apple Silicon"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "huggingface-hub>=1.0",
    "datasets>=5.0.0",
    "tokenizers>=0.22,<0.24",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.1",
    "torch>=2.12.1",
    "accelerate>=1.14.0",
    "transformers>=4.44",
]

[project.scripts]
tinyforge = "tinyforge.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinyforge"]

[tool.ruff]
# Keep ruff's default lint rules (pyflakes + a focused pycodestyle subset) — the
# code already satisfies them. Line length is documented but not enforced (E501
# is not in the default selection) to avoid reformatting churn.
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient nags to migrate to a newer httpx; out of our control.
    "ignore:Using .httpx. with .starlette.testclient.:Warning",
]
